🐛  Fix long name overflow

--- a/src/style.css
+++ b/src/style.css
@@ -1403,7 +1403,7 @@ blockquote p:before {
   box-shadow: 0px 5px 11px 0px rgba(130,130,130,0.8);
   border-radius: 5%;
   width: 13rem;
-  height: 13rem;
+  height: auto;
   right: -1rem;
 }
 
@@ -1414,7 +1414,9 @@ blockquote p:before {
 .dropdown-username {
   font-weight: bold;
   color: black;
+  word-wrap: break-word;
   font-size: 1.18rem !important;
+  padding-bottom: 0.7rem;
 }
 
 .dropdown-github-icon {
@@ -1425,7 +1427,7 @@ blockquote p:before {
   content: "\f007";
   font-family: FontAwesome;
   font-size: 1.5rem !important;
-  margin: 0.7rem 1rem;
+  margin: 0rem 1rem;
 }
 
 .dropdown-user-btn-container {
@@ -1433,6 +1435,7 @@ blockquote p:before {
   display: flex;
   align-items: center;
   margin-left: 0;
+  margin-bottom: 0.5rem;
   font-size: 0.9rem;
 }
 
@@ -1452,6 +1455,7 @@ blockquote p:before {
   display: flex;
   align-items: center;
   margin-left: 0;
+  margin-bottom: 1rem;
   font-size: 0.9rem;
 }
 
@@ -1488,7 +1492,7 @@ blockquote p:before {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 8rem 14rem;
+  grid-template-columns: 8rem auto;
   grid-template-rows: 3rem 1.6rem auto;
   color: #333333;
 }
